feat: refactor to audio wrapper