@@ -1,55 +1,129 @@
 package de.itlobby.discoverj.models;
 
 import de.itlobby.discoverj.util.AudioUtil;
+import de.itlobby.discoverj.util.StringUtil;
+import javafx.scene.image.Image;
 import org.apache.commons.lang3.ObjectUtils;
 import org.jaudiotagger.audio.AudioFile;
 
 import java.io.File;
 import java.util.Objects;
+import java.util.Optional;
 
 import static de.itlobby.discoverj.util.StringUtil.isInteger;
 import static org.apache.commons.lang3.StringUtils.isEmpty;
 
 public class AudioWrapper implements Comparable<AudioWrapper> {
-    private AudioFile audioFile;
-    private boolean hasCover;
     private Integer id;
+    private String filePath;
+    private boolean hasCover;
+    private String artist;
+    private String title;
+    private String album;
+    private String trackNumber;
+    private String parentFilePath;
+    private String fileName;
+    private long fileLength;
+    private boolean readOnly;
+    private String fileNameExtension;
+    private String year;
+    private String albumArtist;
 
-    public AudioWrapper() {
-    }
-
-    public AudioWrapper(FlatAudioWrapper simpleWrapper) {
-        audioFile = AudioUtil.readAudioFile(simpleWrapper.getPath());
-        hasCover = simpleWrapper.isHasCover();
-        id = simpleWrapper.getId();
-    }
-
-    public AudioFile getAudioFile() {
-        return audioFile;
-    }
-
-    public void setAudioFile(AudioFile audioFile) {
-        this.audioFile = audioFile;
-    }
-
-    public boolean hasCover() {
-        return hasCover;
-    }
-
-    public boolean hasNoCover() {
-        return !hasCover;
-    }
-
-    public void setHasCover(boolean hasCover) {
-        this.hasCover = hasCover;
+    public AudioWrapper(Integer id, AudioFile audioFile) {
+        this.id = id;
+        this.filePath = audioFile.getFile().getAbsolutePath();
+        this.fileName = audioFile.getFile().getName();
+        this.parentFilePath = audioFile.getFile().getParentFile().getAbsolutePath();
+        this.hasCover = AudioUtil.haveCover(audioFile);
+        this.artist = AudioUtil.getArtist(audioFile);
+        this.title = AudioUtil.getTitle(audioFile);
+        this.album = AudioUtil.getAlbum(audioFile);
+        this.year = AudioUtil.getYear(audioFile);
+        this.albumArtist = AudioUtil.getAlbumArtist(audioFile);
+        this.trackNumber = AudioUtil.getTrackNumber(audioFile);
+        this.readOnly = !audioFile.getFile().canRead();
+        this.fileLength = audioFile.getFile().length();
+        this.fileNameExtension = StringUtil.getFileExtension(fileName);
     }
 
     public Integer getId() {
         return id;
     }
 
-    public void setId(Integer id) {
-        this.id = id;
+    public String getFilePath() {
+        return filePath;
+    }
+
+    public boolean hasCover() {
+        return hasCover;
+    }
+
+    public String getArtist() {
+        return artist;
+    }
+
+    public String getTitle() {
+        return title;
+    }
+
+    public String getAlbum() {
+        return album;
+    }
+
+    public String getTrackNumber() {
+        return trackNumber;
+    }
+
+    public String getParentFilePath() {
+        return parentFilePath;
+    }
+
+    public String getFileName() {
+        return fileName;
+    }
+
+    public boolean isReadOnly() {
+        return readOnly;
+    }
+
+    public long getFileLength() {
+        return fileLength;
+    }
+
+    public String getFileNameExtension() {
+        return fileNameExtension;
+    }
+
+    public String getYear() {
+        return year;
+    }
+
+    public void setHasCover(boolean hasCover) {
+        this.hasCover = hasCover;
+    }
+
+    public String getAlbumArtist() {
+        return albumArtist;
+    }
+
+    public String getDisplayValue() {
+        String res = "";
+
+        if (!StringUtil.isNullOrEmpty(this.getArtist())) {
+            res += this.getArtist();
+
+            if (!StringUtil.isNullOrEmpty(this.getTitle())) {
+                res += " - " + this.getTitle();
+            }
+        } else {
+            res += this.getFileName();
+        }
+
+        if (!StringUtil.isNullOrEmpty(this.getAlbum())) {
+            res += "\n" + this.getAlbum();
+        }
+
+        return res;
     }
 
     @Override
@@ -58,24 +132,21 @@ public class AudioWrapper implements Comparable<AudioWrapper> {
             return 1;
         }
 
-        File file = getAudioFile().getFile();
-        File file2 = other.getAudioFile().getFile();
+        File file = new File(this.filePath);
+        File file2 = new File(other.filePath);
 
-        String folder = file.getParentFile().getAbsolutePath();
-        String folder2 = file2.getParentFile().getAbsolutePath();
+        String folder = this.getParentFilePath();
+        String folder2 = other.getParentFilePath();
         int folderRes;
 
         folderRes = folder.compareTo(folder2);
 
         if (folderRes == 0) {
-            String album = AudioUtil.getAlbum(this.getAudioFile());
-            String album2 = AudioUtil.getAlbum(other.getAudioFile());
 
-            int albumRes = ObjectUtils.compare(album, album2);
+            int albumRes = ObjectUtils.compare(this.album, other.album);
 
             if (albumRes == 0) {
-                String trackNumber = AudioUtil.getTrackNumber(getAudioFile());
-                String otherTrackNumber = AudioUtil.getTrackNumber(other.getAudioFile());
+                String otherTrackNumber = other.trackNumber;
 
                 if (isEmpty(trackNumber) && isEmpty(otherTrackNumber)) {
                     return ObjectUtils.compare(file.getName(), file2.getName());
@@ -102,37 +173,38 @@ public class AudioWrapper implements Comparable<AudioWrapper> {
 
     @Override
     public boolean equals(Object o) {
-        if (this == o) {
-            return true;
-        }
-        if (o == null || getClass() != o.getClass()) {
-            return false;
-        }
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+
         AudioWrapper that = (AudioWrapper) o;
-        return Objects.equals(hasCover, that.hasCover) &&
-                Objects.equals(audioFile, that.audioFile) &&
-                Objects.equals(id, that.id);
+
+        if (hasCover != that.hasCover) return false;
+        if (!Objects.equals(id, that.id)) return false;
+        if (!Objects.equals(filePath, that.filePath)) return false;
+        if (!Objects.equals(album, that.album)) return false;
+        return Objects.equals(trackNumber, that.trackNumber);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(audioFile, hasCover, id);
-    }
-
-    public String getFileName() {
-        return getFile().getName();
-    }
-
-    public File getFile() {
-        return getAudioFile().getFile();
+        int result = id != null ? id.hashCode() : 0;
+        result = 31 * result + (filePath != null ? filePath.hashCode() : 0);
+        result = 31 * result + (hasCover ? 1 : 0);
+        result = 31 * result + (album != null ? album.hashCode() : 0);
+        result = 31 * result + (trackNumber != null ? trackNumber.hashCode() : 0);
+        return result;
     }
 
     public String getIdentifier() {
-        return String.format("%s%s%s", id, audioFile.getFile().getName().hashCode(), audioFile.getAudioHeader().getTrackLength());
+        return "%s_%s".formatted(id, filePath.hashCode());
     }
 
     @Override
     public String toString() {
-        return audioFile.getFile().getAbsolutePath();
+        return filePath;
+    }
+
+    public Optional<Image> loadImage() {
+        return AudioUtil.getCover(getFilePath());
     }
 }
